# build-linux

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
initramfs/: busybox-config-default
initramfs/contents/: about_device_files.txt  init  welcome_message.txt
initramfs/contents/etc/: profile
kernel/: CMakeLists.txt
kernel/config/: irve-mmu-default  irve-mmu-first-working-very-hacky-kernel-config  irve-mmu-uart-enabled-to-merge-with-default  irve-nommu-default
